Add mobile menu

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
     "@reach/dialog": "0.15.0",
     "date-fns": "2.16.1",
     "react": "17.0.1",
